Update image paths to relative format

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       content="Product leader building modern fintech. Music lover. Tinkerer."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="assets/og-image.png" />
+    <meta property="og:image" content="./assets/og-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -36,7 +36,7 @@
       <header class="header">
         <div class="avatar-wrap">
           <img
-            src="assets/headshot.png"
+            src="./assets/headshot.png"
             alt="Photo of Clay Hefner"
             class="avatar"
           />
