Fix image source path for avatar in index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <header class="header">
         <div class="avatar-wrap">
           <img
-            src="assets/Headshot.png"
+            src="../assets/Headshot.png"
             alt="Photo of Clay Hefner"
             class="avatar"
           />
